--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "recently-viewed-products",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest  --runInBand",
     "local": "nodemon index.js"
   },
   "keywords": [],
@@ -11,13 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "express-winston": "^4.2.0",
+    "firebase": "^11.0.2",
     "firebase-admin": "^13.0.0",
     "jest": "^29.7.0",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "supertest": "^7.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
+    "yamljs": "^0.3.0"
   }
 }
