--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "jest  --runInBand",
-    "local": "nodemon index.js"
+    "start": "babel-node index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +19,22 @@
     "express-winston": "^4.2.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.0",
+    "fireorm": "^0.23.3",
     "jest": "^29.7.0",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
+    "reflect-metadata": "^0.1.14",
     "supertest": "^7.0.0",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/cli": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/plugin-proposal-decorators": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.15.0",
+    "@babel/node": "^7.15.0"
   }
 }
